# autogamer

./: .pylintrc  Cargo.toml  README.md  notes.md  x.py
docs/: index.md
pyautogamer/: .gitignore  __init__.py  components.py  ui.py
pyautogamer/autogamer_bindings/: Cargo.toml
pyautogamer/autogamer_bindings/src/: components.rs  entity.rs  event.rs  event_stream.rs  game.rs  geometry.rs  join.rs  level.rs  lib.rs  physics.rs  renderer.rs  spritesheets.rs  tile_map.rs  ui.rs
pyautogamer/autogamer_bindings/src/ui/: screen.rs
sample/: README.md  demo.py  game.py  getting-started.py
sample/demo_files/: main_menu.py  play_screen.py
sample/images/character/: aliens.json  character.json
sample/levels/: candy.tmx  level1.md  level1.tmx  test.tmx
sample/screens/: main_menu.py
scripts/: character-spritesheet-data.py
src/: component_templates.rs  components.rs  event.rs  event_stream.rs  game.rs  layers.rs  level.rs  lib.rs  main.rs  map.rs  math.rs  physics.rs  renderer.rs  resources.rs  size.rs  spritesheets.rs  systems.rs  tile_map.rs  window.rs
src/component_templates/: custom_props.rs  entity_editor.rs
src/event/: event_kind.rs  key.rs
src/level/: image_params.rs  load_layers.rs  load_objects.rs  load_tilesets.rs
src/renderer/: image_cache.rs
src/resources/: physics_events.rs
src/systems/: collision_detector.rs  currency_system.rs  keyboard.rs  physics.rs  viewport_updater.rs
