[workspace]
members = ["pyautogamer/autogamer_bindings"]

[package]
name = "autogamer"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"

[dependencies]
tiled = "0.9"
specs = {version = "0.16", features = ["specs-derive"]}
thiserror = "1.0"
sdl2 = {version = "0.34", features = ["image", "unsafe_textures"]}
nphysics2d = "0.16"
