[workspace]
members = ["pyautogamer/autogamer_bindings"]

[package]
name = "autogamer"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"

[dependencies]
tiled = "0.9"
specs = {git = "https://github.com/amethyst/specs", features = ["derive"]}
thiserror = "1.0"
sdl2 = {version = "0.34", features = ["image", "unsafe_textures"]}
nphysics2d = "0.16"
parking_lot = "0.11"
noisy_float = "0.1"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
overflow-checks = true
