[package]
name = "autogamer_bindings"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
autogamer = {path = "../.."}
specs = {git = "https://github.com/amethyst/specs", features = ["derive"]}
parking_lot = "0.11"

[dependencies.pyo3]
version = "0.11"
features = ["extension-module"]
