[package]
name = "autogamer_bindings"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
autogamer = {path = "../.."}
specs = {git = "https://github.com/amethyst/specs", features = ["derive"]}
parking_lot = "0.11"

[dependencies.pyo3]
version = "0.15"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "0.15"
